--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -126,7 +126,7 @@ This is well-defined: the proof of Proposition \ref{prop:connected-sum-well-defi
 \end{proof}
 
 \begin{proposition}[Generalised \ref{eq:IHX}]
-	\label{lem:generalised-ihx}
+	\label{prop:generalised-ihx}
 	The following holds in \(\mathcal{J}\) for any subgraph consisting of trivalent vertices that can be inserted into the grey box.
 	\[
 		\sum_{i = 0}^{m}\
@@ -178,24 +178,25 @@ The result is standard --- see for example Chapter 5.2 of \cite{introduction-to-
 	\]
 	where \(\Theta\) is a sum of terms with the marked vertex now a trivalent vertex attached above each of the other univalent vertices. It suffices to show that \(\Theta\) vanishes.
 
-	We can split \(\Theta\) up based on which connected component the marked vertex now connects to. For connected components other than the connected component of the marked vertex, apply a vertical version of the generalised \ref{eq:IHX} relation, 
-    %TODO (Zsuzsi) Reference Proposition 2.1.6 rather than (or in addition to) the original IHX
-    where the the whole connected component is inside the grey box
-    %TODO (Zsuzsi) I was looking for a grey box and found this very confusing because there was no picture corresponding to this paragraph. Then I realised you're referring to the grey box in Prop 2.1.6. A picture would help.
-    except for where the univalent vertices connect to the bottom line. This is the case of the generalised \ref{eq:IHX} where \(n = 0\) and no vertices leave. Hence, the sum vanishes for that connected component.
-    %TODO (Zsuzsi) I can sort of figure out what this means because I use the Generalised IHX daily. But it's not super clear.
-
-	This leaves only the terms where the marked vertex connects back to its own connected component. By a generalised \ref{eq:IHX} of the form
+	We can split \(\Theta\) up based on which connected component the marked vertex now connects to. For connected components other than the connected component of the marked vertex, apply a vertical version of the generalised \ref{eq:IHX} relation (Proposition \ref{prop:generalised-ihx}), to the terms in which the markex vertex connects to that component (this is an \ref{eq:IHX} in which the grey box in Proposition \ref{prop:generalised-ihx} is around the whole connected component, except for where the univalent vertices connect to the skeleton).
+	As such, this is the case of the generalised \ref{eq:IHX} in which \(n = 0\):
 	\[
-		\sum \includegraphics[width=0.25\textwidth, valign=c]{graphics/long_jacobi_diagram_example_same_cc.pdf}\; ,
+		\sum \includegraphics[width=0.25\textwidth, valign=c]{graphics/long_jacobi_diagram_example_diff_cc.pdf}
 		\quad
-		\text{this is equal to the diagram}
+		=
+		\quad
+		0.
+	\]
+
+	This leaves only the terms where the marked vertex connects back to its own connected component. The sum of such terms also vanishes: by a generalised \ref{eq:IHX} relation, we have
+	\[
+		\sum \includegraphics[width=0.25\textwidth, valign=c]{graphics/long_jacobi_diagram_example_same_cc.pdf}
+		\quad
+		=
 		\quad
 		\includegraphics[width=0.25\textwidth, valign=c]{graphics/long_jacobi_diagram_example_lollipop.pdf}.
 	\]
-    %TODO (Zsuzsi) The last sentence is not a sentence. Also, where does the dotted end go? What are you summing over? Why is it equal to the other one? 
 	But any diagram with a ``balloon'' vanishes, as applying the \ref{eq:AS} relation to the vertex on the balloon, it is equal to its negative.
-    %TODO (Zsuzsi) You haven't defined balloon but I get it. It would be more precise to show the "balloon = 0" relation here.
 
 	Hence \(\Theta = 0\), completing the proof.
 \end{proof}
@@ -489,9 +490,7 @@ Indeed, the Lie action relation \(\rho([x, y]) = \rho(x)\rho(y) - \rho(y)\rho(x)
 \section{Non-Lie algebraic weight systems}
 \label{sec:non-lie-algebraic-weight-systems}
 
-Conjecture \ref{conj:lie-algebra-weight-systems-span} being false means that the \ref{eq:STU} relation describes more than the relation \(\rho([x, y]) = \rho(x)\rho(y) - \rho(y)\rho(x)\) for a representation \(\rho\) of a metric Lie algebra. In fact, Construction \ref{cons:lie-algebra-weight-system} 
-%TODO (Zsuzsi) "of Lie algebra weight systems"
-is just one example of a more general construction introduced by Vogel and Vaintrob with the purpose of constructing weight systems coming from metric Lie super-algebras, and further generalisations of Lie algebras.
+Conjecture \ref{conj:lie-algebra-weight-systems-span} being false means that the \ref{eq:STU} relation describes more than the relation \(\rho([x, y]) = \rho(x)\rho(y) - \rho(y)\rho(x)\) for a representation \(\rho\) of a metric Lie algebra. In fact, the construction of metric Lie algebra weight systems seen in \ref{cons:lie-algebra-weight-system} is just one example of a more general construction introduced by Vogel and Vaintrob with the purpose of constructing weight systems coming from metric Lie super-algebras, and further generalisations of Lie algebras.
 
 The most general type of objects these constructions apply to are `Lie \(S\)-algebras' as coined by Vaintrob in \cite{vassiliev-knot-invariants-and-lie-s-algebras}, but we will follow the more modern approach of \cite{on-the-rozansky-witten-weight-systems, rozansky-witten-theory} and will refer to them as Lie algebra objects in a symmetric monoidal category.
 
@@ -505,9 +504,8 @@ The most general type of objects these constructions apply to are `Lie \(S\)-alg
 	\]
 	a \textbf{unit} object \(k \in \mathcal{C}\), and natural isomorphisms
 	\[
-		 \otimes \circ (\otimes \times \operatorname{id}) \longrightarrow \otimes \circ (\operatorname{id} \times \otimes)  \quad \text{ and }\ \quad  \otimes \longrightarrow \operatorname{id}
+		\otimes \circ (\otimes \times \operatorname{id}) \longrightarrow \otimes \circ (\operatorname{id} \times \otimes) ,\quad k \otimes \_ \longrightarrow \id \quad \text{ and }\ \quad \_ \otimes k \longrightarrow \operatorname{id}
 	\]
-    %TODO (Zsuzsi) The second of these can't be right
 	satisfying some relations known as the pentagon and triangle relations \cite[Sec. 1.2]{higher-operads-higher-categories}. The natural isomorphisms give isomorphisms
 	\[(A \otimes B) \otimes C \cong A \otimes (B \otimes C), \qquad k \otimes A \cong A \cong A \otimes k\]
 	for every tuple of objects \(A, B\) and \(C\) in \(\mathcal{C}\). If these isomorphisms are equalities, then \(\mathcal{C}\) is a \textbf{strict} monoidal category.
@@ -650,13 +648,13 @@ If (like in our examples) the monoidal category \(\mathcal{C}\) is additive and 
 			\[(\id \otimes c) \circ (m \otimes \id) = \id = (c \otimes \id) \circ (\id \otimes m)\]
 			and
 			\[m = \tau \circ m \quad \text{and} \quad c = c \circ \tau.\]
-			Diagramatically, these are
+			Diagramatically, these morphisms are
 			\[
 				\includegraphics[width=0.06\textwidth, valign=c]{graphics/string_diagram_metric_no_dot.pdf}
 				\qquad \text{and} \qquad
 				\includegraphics[width=0.06\textwidth, valign=c]{graphics/string_diagram_casimir_no_dot.pdf}\ .
 			\]
-			(like before these morphisms allow us to drop arrows on the thin lines) satisfying
+			(like before these morphisms allow us to drop arrows on the thin lines). The former pair of relations is diagramatically
 			\[
 				\includegraphics[height=0.12\textwidth, valign=c]{graphics/string_diagram_relation_left.pdf}
 				\quad
@@ -669,8 +667,20 @@ If (like in our examples) the monoidal category \(\mathcal{C}\) is additive and 
 				\includegraphics[height=0.12\textwidth, valign=c]{graphics/string_diagram_relation_right.pdf}
 				\quad
 			\]
-			and the second and third relations assert that the diagrams are symmetric.
-            %TODO (Zsuzsi) Draw?
+			and the latter pair is
+			\[
+				\includegraphics[width=0.06\textwidth, valign=c]{graphics/string_diagram_metric_no_dot.pdf}
+				\quad
+				=
+				\quad
+				\includegraphics[width=0.06\textwidth, valign=c]{graphics/string_diagram_metric_no_dot_is_symmetric.pdf}
+				\qquad \text{and} \qquad
+				\includegraphics[width=0.06\textwidth, valign=c]{graphics/string_diagram_casimir_no_dot.pdf}
+				\quad
+				=
+				\quad
+				\includegraphics[width=0.06\textwidth, valign=c]{graphics/string_diagram_casimir_no_dot_is_symmetric.pdf}\ .
+			\]
 		\item
 			\label{def:rigid-category-and-object}
 			A symmetric monoidal category \(\mathcal{C}\) is \textbf{rigid} if for every object \(A\) there exists an object \(A^{\vee}\) and a pair of morphisms \(\iota: A^{\vee} \otimes A \to k\) and \(\epsilon: k \to A \otimes A^{\vee}\) --- respectively called the \textbf{evaluation} and \textbf{coevaluation} --- such that
